trunk/Archive2/03/c6d030f364bf92/output
main.cpp:2:12: error: 'I' has not been declared
     void f(I) {}
            ^
