trunk/Archive2/03/c6d030f364bf92/main.cpp
struct C {
    void f(I) {}
    using I = int;
};

